Make radeon_setup_kernel_mem failures more graceful and verbose.

So that bugs like https://bugs.freedesktop.org/show_bug.cgi?id=48138 can be
diagnosed more easily.

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>